Update Lifestyle Factor Correlations.ipynb

--- a/Lifestyle Factor Correlations.ipynb
+++ b/Lifestyle Factor Correlations.ipynb
@@ -28,8 +28,8 @@
     "pheno <- fread(file=\"/home//mmihov/Projects/Maternal_Smoking/MS_TWAS_PheWAS_heritability/MS_Cox_PheWAS_Cor/data/V2/UoA_UKB_phenotypes_2021-19-11.txt\", data.table=F)\n",
     "\n",
     "#Fix the required columns to be in numeric format\n",
-    "pheno$maternal_smoking=as.numeric(pheno'$'maternal_smoking)\n",
-    "pheno$sex=as.numeric(pheno'$'sex)\n",
+    "pheno$maternal_smoking=as.numeric(pheno\\$maternal_smoking)\n",
+    "pheno$sex=as.numeric(pheno$sex)\n",
     "pheno$x_agebase=as.numeric(pheno$x_agebase)\n",
     "pheno$education=as.numeric(pheno$education)\n",
     "pheno$alcohol=as.numeric(pheno$alcohol)\n",
