Update Lifestyle Factor Correlations.ipynb

--- a/Lifestyle Factor Correlations.ipynb
+++ b/Lifestyle Factor Correlations.ipynb
@@ -25,18 +25,18 @@
     "options(repr.matrix.max.cols = 1000)\n",
     "\n",
     "#load in the data table from UKBiobank\n",
-    "pheno <- fread(file=\"/home//mmihov/Projects/Maternal_Smoking/MS_TWAS_PheWAS_heritability/MS_Cox_PheWAS_Cor/data/V2/UoA_UKB_phenotypes_2021-19-11.txt\", data.table=F)\n",
+    "pheno <- fread(file=\"Path_to_UKBiobank_phenotypes_file/file.txt\", data.table=F)\n",
     "\n",
     "#Fix the required columns to be in numeric format\n",
-    "pheno$maternal_smoking=as.numeric(pheno\\$maternal_smoking)\n",
-    "pheno$sex=as.numeric(pheno$sex)\n",
-    "pheno$x_agebase=as.numeric(pheno$x_agebase)\n",
-    "pheno$education=as.numeric(pheno$education)\n",
-    "pheno$alcohol=as.numeric(pheno$alcohol)\n",
-    "pheno$lack_of_PA=as.numeric(pheno$lack_of_PA)\n",
-    "pheno$deprv_index=as.numeric(pheno$deprv_index)\n",
-    "pheno$packyears=as.numeric(pheno$packyears)\n",
-    "pheno$smoking_status=as.numeric(pheno$smoking_status, levels=c(0,1,2))\n",
+    "pheno\\$maternal_smoking=as.numeric(pheno\\$maternal_smoking)\n",
+    "pheno\\$sex=as.numeric(pheno\\$sex)\n",
+    "pheno\\$x_agebase=as.numeric(pheno\\$x_agebase)\n",
+    "pheno\\$education=as.numeric(pheno\\$education)\n",
+    "pheno\\$alcohol=as.numeric(pheno\\$alcohol)\n",
+    "pheno\\$lack_of_PA=as.numeric(pheno\\$lack_of_PA)\n",
+    "pheno\\$deprv_index=as.numeric(pheno\\$deprv_index)\n",
+    "pheno\\$packyears=as.numeric(pheno\\$packyears)\n",
+    "pheno\\$smoking_status=as.numeric(pheno$smoking_status, levels=c(0,1,2))\n",
     "\n",
     "#remove all records with sex chromosome abnormalities, non-European ancestry and missing maternal smoking record\n",
     "pheno=pheno[is.na(pheno$sex_aneu)&is.na(pheno$gen_exclude) & !is.na(pheno$gen_ethnicity) & (pheno$maternal_smoking!=\"missing\") & !is.na(pheno$maternal_smoking),]\n",
