--- a/Lifestyle Factor Correlations.ipynb
+++ b/Lifestyle Factor Correlations.ipynb
@@ -39,7 +39,7 @@
     "pheno\\$smoking_status=as.numeric(pheno$smoking_status, levels=c(0,1,2))\n",
     "\n",
     "#remove all records with sex chromosome abnormalities, non-European ancestry and missing maternal smoking record\n",
-    "pheno=pheno[is.na(pheno$sex_aneu)&is.na(pheno$gen_exclude) & !is.na(pheno$gen_ethnicity) & (pheno$maternal_smoking!=\"missing\") & !is.na(pheno$maternal_smoking),]\n",
+    "pheno=pheno[is.na(pheno\\$sex_aneu)&is.na(pheno\\$gen_exclude) & !is.na(pheno\\$gen_ethnicity) & (pheno\\$maternal_smoking!=\"missing\") & !is.na(pheno\\$maternal_smoking),]\n",
     "\n",
     "#change all NA values related to personal smoking status to \"missing\". This will make sure they are included during the calcualtion of the linear models.\n",
     "pheno[is.na(pheno$smoking_status), \"smoking_status\"]=\"missing\"\n",
@@ -48,16 +48,16 @@
     "\n",
     "\n",
     "#impute missing values for deprivation index and pack years to the median for the population\n",
-    "pheno[is.na(pheno$deprv_index), \"deprv_index\"]=median(pheno$deprv_index, na.rm=T)\n",
-    "pheno[is.na(pheno$packyears), \"packyears\"]=median(pheno$packyears, na.rm=T)\n",
+    "pheno[is.na(pheno\\$deprv_index), \"deprv_index\"]=median(pheno\\$deprv_index, na.rm=T)\n",
+    "pheno[is.na(pheno\\$packyears), \"packyears\"]=median(pheno\\$packyears, na.rm=T)\n",
     "\n",
     "#Fix all people that indicated non-smoker status to have pack years equal to 0\n",
-    "pheno[(pheno$smoking_status)==0, \"packyears\"]=0\n",
+    "pheno[(pheno\\$smoking_status)==0, \"packyears\"]=0\n",
     "\n",
     "#scale all continuous variables to have a mean = 0 and SD = 1\n",
-    "pheno$x_BMI=scale(pheno$x_BMI)\n",
-    "pheno$deprv_index=scale(pheno$deprv_index)\n",
-    "pheno$packyears=scale(pheno$packyears)\n",
+    "pheno\\$x_BMI=scale(pheno\\$x_BMI)\n",
+    "pheno\\$deprv_index=scale(pheno\\$deprv_index)\n",
+    "pheno\\$packyears=scale(pheno\\$packyears)\n",
     "\n",
     "head(pheno)"
    ]
@@ -187,10 +187,10 @@
    "outputs": [],
    "source": [
     "#Create female, male, smoker and non-smoker subgroups of the data \n",
-    "pheno.f=pheno[pheno$sex==0,]\n",
-    "pheno.m=pheno[pheno$sex==1,]\n",
-    "pheno.smokers=pheno[pheno$smoking_status>0,]\n",
-    "pheno.nonsmokers=pheno[pheno$smoking_status==0,]\n",
+    "pheno.f=pheno[pheno\\$sex==0,]\n",
+    "pheno.m=pheno[pheno\\$sex==1,]\n",
+    "pheno.smokers=pheno[pheno\\$smoking_status>0,]\n",
+    "pheno.nonsmokers=pheno[pheno\\$smoking_status==0,]\n",
     "\n",
     "#Repeat the analysis for each subgroup following the above steps\n",
     "\n",
@@ -216,8 +216,8 @@
    "outputs": [],
    "source": [
     "#Make the first column in the data frames to be row names\n",
-    "rownames(df_beta)=df_beta$term\n",
-    "rownames(df_p)=df_p$term\n",
+    "rownames(df_beta)=df_beta\\$term\n",
+    "rownames(df_p)=df_p\\$term\n",
     "\n",
     "#Transpose both dataframes\n",
     "df_beta=t(df_beta)\n",
