--- a/Blood Marker Correlations.ipynb
+++ b/Blood Marker Correlations.ipynb
@@ -28,100 +28,100 @@
     "pheno <- fread(file=\"Path_to_UKBiobank_phenotypes_file/file.txt\", data.table=F)\n",
     "\n",
     "#Fix the required columns to be in numeric format\n",
-    "pheno\\\\$maternal_smoking=as.numeric(pheno\\\\$maternal_smoking)\n",
-    "pheno\\\\$sex=as.numeric(pheno\\\\$sex)\n",
-    "pheno\\\\$x_agebase=as.numeric(pheno\\\\$x_agebase)\n",
-    "pheno\\\\$education=as.numeric(pheno\\\\$education)\n",
-    "pheno\\\\$alcohol=as.numeric(pheno\\\\$alcohol)\n",
-    "pheno\\\\$lack_of_PA=as.numeric(pheno\\\\$lack_of_PA)\n",
-    "pheno\\\\$deprv_index=as.numeric(pheno\\\\$deprv_index)\n",
-    "pheno\\\\$packyears=as.numeric(pheno\\\\$packyears)\n",
-    "pheno\\\\$smoking_status=as.numeric(pheno\\\\$smoking_status, levels=c(0,1,2))\n",
-    "pheno\\\\$x_WBC=as.numeric(pheno\\\\$x_WBC)\n",
-    "pheno\\\\$x_RBC=as.numeric(pheno\\\\$x_RBC)\n",
-    "pheno\\\\$x_lymphocytes=as.numeric(pheno\\\\$x_lymphocytes)\n",
-    "pheno\\\\$x_platelet_count=as.numeric(pheno\\\\$x_platelet_count)\n",
-    "pheno\\\\$x_neutrophill=as.numeric(pheno\\\\$x_neutrophill)\n",
-    "pheno\\\\$x_Microalbumin=as.numeric(pheno\\\\$x_Microalbumin)\n",
-    "pheno\\\\$x_Creatinine=as.numeric(pheno\\\\$x_Creatinine)\n",
-    "pheno\\\\$x_APOA=as.numeric(pheno\\\\$x_APOA)\n",
-    "pheno\\\\$x_APOB=as.numeric(pheno\\\\$x_APOB)\n",
-    "pheno\\\\$x_Cholesterol=as.numeric(pheno\\\\$x_Cholesterol)\n",
-    "pheno\\\\$x_HDL=as.numeric(pheno\\\\$x_HDL)\n",
-    "pheno\\\\$x_LDL=as.numeric(pheno\\\\$x_LDL)\n",
-    "pheno\\\\$x_Triglycerides=as.numeric(pheno\\\\$x_Triglycerides)\n",
-    "pheno\\\\$x_CRP=as.numeric(pheno\\\\$x_CRP)\n",
-    "pheno\\\\$x_Cystatin=as.numeric(pheno\\\\$x_Cystatin)\n",
-    "pheno\\\\$x_HbA1c=as.numeric(pheno\\\\$x_HbA1c)\n",
-    "pheno\\\\$x_IGF=as.numeric(pheno\\\\$x_IGF)\n",
-    "pheno\\\\$x_VITD=as.numeric(pheno\\\\$x_VITD)\n",
-    "pheno\\\\$x_GGT=as.numeric(pheno\\\\$x_GGT)\n",
-    "pheno\\\\$x_ASP_AT=as.numeric(pheno\\\\$x_ASP_AT)\n",
-    "pheno\\\\$x_ALA_AT=as.numeric(pheno\\\\$x_ALA_AT)\n",
-    "pheno\\\\$x_AP=as.numeric(pheno\\\\$x_AP)\n",
+    "pheno\\$maternal_smoking=as.numeric(pheno\\$maternal_smoking)\n",
+    "pheno\\$sex=as.numeric(pheno\\$sex)\n",
+    "pheno\\$x_agebase=as.numeric(pheno\\$x_agebase)\n",
+    "pheno\\$education=as.numeric(pheno\\$education)\n",
+    "pheno\\$alcohol=as.numeric(pheno\\$alcohol)\n",
+    "pheno\\$lack_of_PA=as.numeric(pheno\\$lack_of_PA)\n",
+    "pheno\\$deprv_index=as.numeric(pheno\\$deprv_index)\n",
+    "pheno\\$packyears=as.numeric(pheno\\$packyears)\n",
+    "pheno\\$smoking_status=as.numeric(pheno\\$smoking_status, levels=c(0,1,2))\n",
+    "pheno\\$x_WBC=as.numeric(pheno\\$x_WBC)\n",
+    "phen\\\$x_RBC=as.numeric(pheno\\$x_RBC)\n",
+    "pheno\\$x_lymphocytes=as.numeric(pheno\\$x_lymphocytes)\n",
+    "pheno\\$x_platelet_count=as.numeric(pheno\\$x_platelet_count)\n",
+    "pheno\\$x_neutrophill=as.numeric(pheno\\$x_neutrophill)\n",
+    "pheno\\$x_Microalbumin=as.numeric(pheno\\$x_Microalbumin)\n",
+    "pheno\\$x_Creatinine=as.numeric(pheno\\$x_Creatinine)\n",
+    "pheno\\$x_APOA=as.numeric(pheno\\$x_APOA)\n",
+    "pheno\\$x_APOB=as.numeric(pheno\\$x_APOB)\n",
+    "pheno\\$x_Cholesterol=as.numeric(pheno\\$x_Cholesterol)\n",
+    "pheno\\$x_HDL=as.numeric(pheno\\$x_HDL)\n",
+    "pheno\\$x_LDL=as.numeric(pheno\\$x_LDL)\n",
+    "pheno\\$x_Triglycerides=as.numeric(pheno\\$x_Triglycerides)\n",
+    "pheno\\$x_CRP=as.numeric(pheno\\$x_CRP)\n",
+    "pheno\\$x_Cystatin=as.numeric(pheno\\$x_Cystatin)\n",
+    "pheno\\$x_HbA1c=as.numeric(pheno\\$x_HbA1c)\n",
+    "pheno\\$x_IGF=as.numeric(pheno\\$x_IGF)\n",
+    "pheno\\$x_VITD=as.numeric(pheno\\$x_VITD)\n",
+    "pheno\\$x_GGT=as.numeric(pheno\\$x_GGT)\n",
+    "pheno\\$x_ASP_AT=as.numeric(pheno\\$x_ASP_AT)\n",
+    "pheno\\$x_ALA_AT=as.numeric(pheno\\$x_ALA_AT)\n",
+    "pheno\\$x_AP=as.numeric(pheno\\$x_AP)\n",
     "\n",
     "#remove all records with sex chromosome abnormalities, non-European ancestry and missing maternal smoking record\n",
-    "pheno=pheno[is.na(pheno\\\\$sex_aneu) & is.na(pheno\\\\$gen_exclude) & !is.na(pheno\\\\$gen_ethnicity) & (pheno\\\\$maternal_smoking!=\"missing\") & !is.na(pheno\\\\$maternal_smoking),]\n",
+    "pheno=pheno[is.na(pheno\\$sex_aneu) & is.na(pheno\\$gen_exclude) & !is.na(pheno\\$gen_ethnicity) & (pheno\\$maternal_smoking!=\"missing\") & !is.na(pheno\\$maternal_smoking),]\n",
     "\n",
     "#change all NA values related to personal smoking status to \"missing\". This will make sure they are included during the calcualtion of the linear models.\n",
-    "pheno[is.na(pheno\\\\$smoking_status), \"smoking_status\"]=\"missing\"\n",
+    "pheno[is.na(pheno\\$smoking_status), \"smoking_status\"]=\"missing\"\n",
     "\n",
     "\n",
     "#impute missing values for deprivation index and pack years to the median for the population\n",
-    "pheno[is.na(pheno\\\\$deprv_index), \"deprv_index\"]=median(pheno\\\\$deprv_index, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$packyears), \"packyears\"]=median(pheno\\\\$packyears, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_WBC), \"x_WBC\"]=median(pheno\\\\$x_WBC, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_RBC), \"x_RBC\"]=median(pheno\\\\$x_RBC, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_lymphocytes), \"x_lymphocytes\"]=median(pheno\\\\$x_lymphocytes, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_platelet_count), \"x_platelet_count\"]=median(pheno\\\\$x_platelet_count, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_neutrophill), \"x_neutrophill\"]=median(pheno\\\\$x_neutrophill, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_Microalbumin), \"x_Microalbumin\"]=median(pheno\\\\$x_Microalbumin, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_Creatinine), \"x_Creatinine\"]=median(pheno\\\\$x_Creatinine, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_APOA), \"x_APOA\"]=median(pheno\\\\$x_APOA, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_APOB), \"x_APOB\"]=median(pheno\\\\$x_APOB, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_Cholesterol), \"x_Cholesterol\"]=median(pheno\\\\$x_Cholesterol, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_HDL), \"x_HDL\"]=median(pheno\\\\$x_HDL, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_LDL), \"x_LDL\"]=median(pheno\\\\$x_LDL, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_Triglycerides), \"x_Triglycerides\"]=median(pheno\\\\$x_Triglycerides, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_CRP), \"x_CRP\"]=median(pheno\\\\$x_CRP, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_Cystatin), \"x_Cystatin\"]=median(pheno\\\\$x_Cystatin, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_HbA1c), \"x_HbA1c\"]=median(pheno\\\\$x_HbA1c, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_IGF), \"x_IGF\"]=median(pheno\\\\$x_IGF, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_VITD), \"x_VITD\"]=median(pheno\\\\$x_VITD, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_GGT), \"x_GGT\"]=median(pheno\\\\$x_GGT, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_ASP_AT), \"x_ASP_AT\"]=median(pheno\\\\$x_ASP_AT, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_ALA_AT), \"x_ALA_AT\"]=median(pheno\\\\$x_ALA_AT, na.rm=T)\n",
-    "pheno[is.na(pheno\\\\$x_AP), \"x_AP\"]=median(pheno\\\\$x_AP, na.rm=T)\n",
+    "pheno[is.na(pheno\\$deprv_index), \"deprv_index\"]=median(pheno\\$deprv_index, na.rm=T)\n",
+    "pheno[is.na(pheno\\$packyears), \"packyears\"]=median(pheno\\$packyears, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_WBC), \"x_WBC\"]=median(pheno\\$x_WBC, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_RBC), \"x_RBC\"]=median(pheno\\$x_RBC, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_lymphocytes), \"x_lymphocytes\"]=median(pheno\\$x_lymphocytes, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_platelet_count), \"x_platelet_count\"]=median(pheno\\$x_platelet_count, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_neutrophill), \"x_neutrophill\"]=median(pheno\\$x_neutrophill, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_Microalbumin), \"x_Microalbumin\"]=median(pheno\\$x_Microalbumin, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_Creatinine), \"x_Creatinine\"]=median(pheno\\$x_Creatinine, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_APOA), \"x_APOA\"]=median(pheno\\$x_APOA, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_APOB), \"x_APOB\"]=median(pheno\\$x_APOB, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_Cholesterol), \"x_Cholesterol\"]=median(pheno\\$x_Cholesterol, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_HDL), \"x_HDL\"]=median(pheno\\$x_HDL, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_LDL), \"x_LDL\"]=median(pheno\\$x_LDL, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_Triglycerides), \"x_Triglycerides\"]=median(pheno\\$x_Triglycerides, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_CRP), \"x_CRP\"]=median(pheno\\$x_CRP, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_Cystatin), \"x_Cystatin\"]=median(pheno\\$x_Cystatin, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_HbA1c), \"x_HbA1c\"]=median(pheno\\$x_HbA1c, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_IGF), \"x_IGF\"]=median(pheno\\$x_IGF, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_VITD), \"x_VITD\"]=median(pheno\\$x_VITD, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_GGT), \"x_GGT\"]=median(pheno\\$x_GGT, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_ASP_AT), \"x_ASP_AT\"]=median(pheno\\$x_ASP_AT, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_ALA_AT), \"x_ALA_AT\"]=median(pheno\\$x_ALA_AT, na.rm=T)\n",
+    "pheno[is.na(pheno\\$x_AP), \"x_AP\"]=median(pheno\\$x_AP, na.rm=T)\n",
     "\n",
     "#Fix all people that indicated non-smoker status to have pack years equal to 0\n",
-    "pheno[(pheno\\\\$smoking_status)==0, \"packyears\"]=0\n",
+    "pheno[(pheno\\$smoking_status)==0, \"packyears\"]=0\n",
     "\n",
     "#scale all continuous variables to have a mean = 0 and SD = 1\n",
-    "pheno\\\\$x_BMI=scale(pheno\\\\$x_BMI)\n",
-    "pheno\\\\$deprv_index=scale(pheno\\\\$deprv_index)\n",
-    "pheno\\\\$packyears=scale(pheno\\\\$packyears)\n",
-    "pheno\\\\$x_WBC=scale(pheno\\\\$x_WBC)\n",
-    "pheno\\\\$x_RBC=scale(pheno\\\\$x_RBC)\n",
-    "pheno\\\\$x_lymphocytes=scale(pheno\\\\$x_lymphocytes)\n",
-    "pheno\\\\$x_platelet_count=scale(pheno\\\\$x_platelet_count)\n",
-    "pheno\\\\$x_neutrophill=scale(pheno\\\\$x_neutrophill)\n",
-    "pheno\\\\$x_Microalbumin=scale(pheno\\\\$x_Microalbumin)\n",
-    "pheno\\\\$x_Creatinine=scale(pheno\\\\$x_Creatinine)\n",
-    "pheno\\\\$x_APOA=scale(pheno\\\\$x_APOA)\n",
-    "pheno\\\\$x_APOB=scale(pheno\\\\$x_APOB)\n",
-    "pheno\\\\$x_Cholesterol=scale(pheno\\\\$x_Cholesterol)\n",
-    "pheno\\\\$x_HDL=scale(pheno\\\\$x_HDL)\n",
-    "pheno\\\\$x_LDL=scale(pheno\\\\$x_LDL)\n",
-    "pheno\\\\$x_Triglycerides=scale(pheno\\\\$x_Triglycerides)\n",
-    "pheno\\\\$x_CRP=scale(pheno\\\\$x_CRP)\n",
-    "pheno\\\\$x_Cystatin=scale(pheno\\\\$x_Cystatin)\n",
-    "pheno\\\\$x_HbA1c=scale(pheno\\\\$x_HbA1c)\n",
-    "pheno\\\\$x_IGF=scale(pheno\\\\$x_IGF)\n",
-    "pheno\\\\$x_VITD=scale(pheno\\\\$x_VITD)\n",
-    "pheno\\\\$x_GGT=scale(pheno\\\\$x_GGT)\n",
-    "pheno\\\\$x_ASP_AT=scale(pheno\\\\$x_ASP_AT)\n",
-    "pheno\\\\$x_ALA_AT=scale(pheno\\\\$x_ALA_AT)\n",
-    "pheno\\\\$x_AP=scale(pheno\\\\$x_AP)\n",
+    "pheno\\$x_BMI=scale(pheno\\$x_BMI)\n",
+    "pheno\\$deprv_index=scale(pheno\\$deprv_index)\n",
+    "pheno\\$packyears=scale(pheno\\$packyears)\n",
+    "pheno\\$x_WBC=scale(pheno\\$x_WBC)\n",
+    "pheno\\$x_RBC=scale(pheno\\$x_RBC)\n",
+    "pheno\\$x_lymphocytes=scale(pheno\\$x_lymphocytes)\n",
+    "pheno\\$x_platelet_count=scale(pheno\\$x_platelet_count)\n",
+    "pheno\\$x_neutrophill=scale(pheno\\$x_neutrophill)\n",
+    "pheno\\$x_Microalbumin=scale(pheno\\$x_Microalbumin)\n",
+    "pheno\\$x_Creatinine=scale(pheno\\$x_Creatinine)\n",
+    "pheno\\$x_APOA=scale(pheno\\$x_APOA)\n",
+    "pheno\\$x_APOB=scale(pheno\\$x_APOB)\n",
+    "pheno\\$x_Cholesterol=scale(pheno\\$x_Cholesterol)\n",
+    "pheno\\$x_HDL=scale(pheno\\$x_HDL)\n",
+    "pheno\\$x_LDL=scale(pheno\\$x_LDL)\n",
+    "pheno\\$x_Triglycerides=scale(pheno\\$x_Triglycerides)\n",
+    "pheno\\$x_CRP=scale(pheno\\$x_CRP)\n",
+    "pheno\\$x_Cystatin=scale(pheno\\$x_Cystatin)\n",
+    "pheno\\$x_HbA1c=scale(pheno\\$x_HbA1c)\n",
+    "pheno\\$x_IGF=scale(pheno\\$x_IGF)\n",
+    "pheno\\$x_VITD=scale(pheno\\$x_VITD)\n",
+    "pheno\\$x_GGT=scale(pheno\\$x_GGT)\n",
+    "pheno\\$x_ASP_AT=scale(pheno\\$x_ASP_AT)\n",
+    "pheno\\$x_ALA_AT=scale(pheno\\$x_ALA_AT)\n",
+    "pheno\\$x_AP=scale(pheno\\$x_AP)\n",
     "\n",
     "#Restric the database to the required parameters\n",
     "pheno=pheno[,c(\"studiepersonid\",\"maternal_smoking\",\"sex\",\"x_agebase\",\"x_BMI\", \"sex_aneu\", \"gen_exclude\", \"gen_ethnicity\",\n",
