Update Blood Marker Correlations.ipynb

--- a/Blood Marker Correlations.ipynb
+++ b/Blood Marker Correlations.ipynb
@@ -38,7 +38,7 @@
     "pheno\\$packyears=as.numeric(pheno\\$packyears)\n",
     "pheno\\$smoking_status=as.numeric(pheno\\$smoking_status, levels=c(0,1,2))\n",
     "pheno\\$x_WBC=as.numeric(pheno\\$x_WBC)\n",
-    "phen\\\$x_RBC=as.numeric(pheno\\$x_RBC)\n",
+    "pheno\\$x_RBC=as.numeric(pheno\\$x_RBC)\n",
     "pheno\\$x_lymphocytes=as.numeric(pheno\\$x_lymphocytes)\n",
     "pheno\\$x_platelet_count=as.numeric(pheno\\$x_platelet_count)\n",
     "pheno\\$x_neutrophill=as.numeric(pheno\\$x_neutrophill)\n",
@@ -139,10 +139,10 @@
    "outputs": [],
    "source": [
     "#Create female, male, smoker and non-smoker subgroups of the data \n",
-    "pheno.f=pheno[pheno$sex==0,]\n",
-    "pheno.m=pheno[pheno$sex==1,]\n",
-    "pheno.smokers=pheno[pheno$smoking_status>0,]\n",
-    "pheno.nonsmokers=pheno[pheno$smoking_status==0,]"
+    "pheno.f=pheno[pheno\\$sex==0,]\n",
+    "pheno.m=pheno[pheno\\$sex==1,]\n",
+    "pheno.smokers=pheno[pheno\\$smoking_status>0,]\n",
+    "pheno.nonsmokers=pheno[pheno\\$smoking_status==0,]"
    ]
   },
   {
@@ -173,7 +173,7 @@
     "}\n",
     "\n",
     "#Change the term column to indicate the correlated variable in the correct order\n",
-    "bm.beta$term[-1]=colnames(pheno)[15:ncol(pheno)]\n",
+    "bm.beta\\$term[-1]=colnames(pheno)[15:ncol(pheno)]\n",
     "\n",
     "#Name each column in the table accordingly (e.g. The first column is the overall or \"All\" analysis)\n",
     "colnames(bm.beta)[2]=\"All\"\n",
@@ -236,7 +236,7 @@
     "    colnames(bm.beta.temp)[2]=\"Never smokers\"\n",
     "    }\n",
     "    \n",
-    "    bm.beta.temp$term[-1]=colnames(pheno)[15:ncol(pheno)]\n",
+    "    bm.beta.temp\\$term[-1]=colnames(pheno)[15:ncol(pheno)]\n",
     "    \n",
     "    #bind the new columns to the main (bm.beta) dataframe\n",
     "    bm.beta=full_join(bm.beta,bm.beta.temp, by=\"term\")\n",
