--- a/MatchIt.ipynb
+++ b/MatchIt.ipynb
@@ -39,23 +39,23 @@
     "phenotypes=fread(\"~/your_directory/Phenotype.txt\", data.table=FALSE)\n",
     "\n",
     "# fix Tobacco phenotype\n",
-    "table(phenotypes$Tobacco)\n",
-    "phenotypes[phenotypes$Tobacco==\"contrtol\", \"Tobacco\"]=\"control\"\n",
-    "table(phenotypes$Tobacco)\n",
+    "table(phenotypes\\$Tobacco)\n",
+    "phenotypes[phenotypes\\$Tobacco==\"contrtol\", \"Tobacco\"]=\"control\"\n",
+    "table(phenotypes\\$Tobacco)\n",
     "\n",
     "# use median BMI as imputation for missing BMI\n",
-    "phenotypes[is.na(phenotypes$BMI), \"BMI\"]=median(phenotypes$BMI, na.rm=TRUE)\n",
+    "phenotypes[is.na(phenotypes\\$BMI), \"BMI\"]=median(phenotypes\\$BMI, na.rm=TRUE)\n",
     "\n",
     "# scale BMI and Age to have mean of 0 and sd of one\n",
-    "phenotypes$BMI=scale(phenotypes$BMI)\n",
-    "phenotypes$AGE=scale(phenotypes$AGE)\n",
+    "phenotypes\\$BMI=scale(phenotypes\\$BMI)\n",
+    "phenotypes\\$AGE=scale(phenotypes\\$AGE)\n",
     "\n",
     "# reduce phenotypes to samples which are present in count data\n",
-    "phenotypes=phenotypes[!is.na(match(phenotypes$sample, colnames(counts))),]\n",
+    "phenotypes=phenotypes[!is.na(match(phenotypes\\$sample, colnames(counts))),]\n",
     "\n",
     "\n",
     "# reorder phenotypes to be in same order as counts\n",
-    "phenotypes=phenotypes[match(colnames(counts), phenotypes$sample),]\n",
+    "phenotypes=phenotypes[match(colnames(counts), phenotypes\\$sample),]\n",
     "head(phenotypes)"
    ]
   },
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "#Set rownames as sample names (column 1) and delete it\n",
-    "rownames(phenotypes)=phenotypes$sample\n",
+    "rownames(phenotypes)=phenotypes\\$sample\n",
     "phenotypes=phenotypes[,-1]\n",
     "head(phenotypes)"
    ]
@@ -80,25 +80,25 @@
    "outputs": [],
    "source": [
     "#Change parameter values to be in binary format of 0 an 1\n",
-    "phenotypes[phenotypes$Tobacco==\"control\", \"Tobacco\"]=0\n",
-    "phenotypes[phenotypes$Tobacco==\"smokes\", \"Tobacco\"]=1\n",
+    "phenotypes[phenotypes\\$Tobacco==\"control\", \"Tobacco\"]=0\n",
+    "phenotypes[phenotypes\\$Tobacco==\"smokes\", \"Tobacco\"]=1\n",
     "\n",
-    "phenotypes[phenotypes$SEX==\"male\", \"SEX\"]=0\n",
-    "phenotypes[phenotypes$SEX==\"female\", \"SEX\"]=1\n",
+    "phenotypes[phenotypes\\$SEX==\"male\", \"SEX\"]=0\n",
+    "phenotypes[phenotypes\\$SEX==\"female\", \"SEX\"]=1\n",
     "\n",
-    "phenotypes[phenotypes$AGE_groups==\"early\", \"AGE_groups\"]=1\n",
-    "phenotypes[phenotypes$AGE_groups==\"mid\", \"AGE_groups\"]=2\n",
-    "phenotypes[phenotypes$AGE_groups==\"late\", \"AGE_groups\"]=3\n",
+    "phenotypes[phenotypes\\$AGE_groups==\"early\", \"AGE_groups\"]=1\n",
+    "phenotypes[phenotypes\\$AGE_groups==\"mid\", \"AGE_groups\"]=2\n",
+    "phenotypes[phenotypes\\$AGE_groups==\"late\", \"AGE_groups\"]=3\n",
     "\n",
-    "phenotypes[phenotypes$BMI_groups==\"no\", \"BMI_groups\"]=0\n",
-    "phenotypes[phenotypes$BMI_groups==\"yes\", \"BMI_groups\"]=1\n",
+    "phenotypes[phenotypes\\$BMI_groups==\"no\", \"BMI_groups\"]=0\n",
+    "phenotypes[phenotypes\\$BMI_groups==\"yes\", \"BMI_groups\"]=1\n",
     "\n",
     "#Transform all fields in numeric values\n",
-    "phenotypes$Tobacco=as.numeric(phenotypes$Tobacco)\n",
-    "phenotypes$SEX=as.numeric(phenotypes$SEX)\n",
-    "phenotypes$AGE_groups=as.numeric(phenotypes$AGE_groups)\n",
-    "phenotypes$BMI=as.numeric(phenotypes$BMI)\n",
-    "phenotypes$AGE=as.numeric(phenotypes$AGE)"
+    "phenotypes\\$Tobacco=as.numeric(phenotypes\\$Tobacco)\n",
+    "phenotypes\\$SEX=as.numeric(phenotypes\\$SEX)\n",
+    "phenotypes\\$AGE_groups=as.numeric(phenotypes\\$AGE_groups)\n",
+    "phenotypes\\$BMI=as.numeric(phenotypes\\$BMI)\n",
+    "phenotypes\\$AGE=as.numeric(phenotypes\\$AGE)"
    ]
   },
   {
@@ -109,10 +109,10 @@
    "outputs": [],
    "source": [
     "#Transform the variables to be used for matching in to leveled factors \n",
-    "phenotypes$AGE_groups=as.factor(phenotypes$AGE_groups)\n",
-    "phenotypes$SEX=as.factor(phenotypes$SEX)\n",
-    "phenotypes$Tobacco=as.factor(phenotypes$Tobacco)\n",
-    "phenotypes$BMI_groups=as.factor(phenotypes$BMI_groups)"
+    "phenotypes\\$AGE_groups=as.factor(phenotypes\\$AGE_groups)\n",
+    "phenotypes\\$SEX=as.factor(phenotypes\\$SEX)\n",
+    "phenotypes\\$Tobacco=as.factor(phenotypes\\$Tobacco)\n",
+    "phenotypes\\$BMI_groups=as.factor(phenotypes\\$BMI_groups)"
    ]
   },
   {
