--- a/PheWAS.ipynb
+++ b/PheWAS.ipynb
@@ -41,29 +41,28 @@
    "outputs": [],
    "source": [
     "# exclude individuals whith sex chromosome abnormalities\n",
-    "filtered=which(!is.na(phenotypes$sex_aneu))\n",
+    "filtered=which(!is.na(phenotypes\\$sex_aneu))\n",
     "\n",
     "nrow(phenotypes[filtered,])\n",
     "nrow(phenotypes[-filtered,])\n",
     "phenotypes=phenotypes[-filtered,]\n",
     "\n",
     "# exclude individuals which failed genotyping QC\n",
-    "filtered=which(is.na(phenotypes$gen_exclude))\n",
+    "filtered=which(is.na(phenotypes\\$gen_exclude))\n",
     "\n",
     "nrow(phenotypes[-filtered,])\n",
     "nrow(phenotypes[filtered,])\n",
     "phenotypes=phenotypes[filtered,]\n",
     "\n",
     "# exclude samples which are not europeans genetically\n",
-    "filtered=which(phenotypes$gen_ethnicity==1)\n",
+    "filtered=which(phenotypes\\$gen_ethnicity==1)\n",
     "\n",
     "nrow(phenotypes[-filtered,])\n",
     "nrow(phenotypes[filtered,])\n",
     "phenotypes=phenotypes[filtered,]\n",
     "\n",
     "# exclude samples whith missing Maternal smoking during pregnancy status\n",
-    "message(\"----- exclude missing MS -------\")\n",
-    "filtered=which(phenotypes$maternal_smoking==\"missing\")\n",
+    "filtered=which(phenotype\\s$maternal_smoking==\"missing\")\n",
     "\n",
     "nrow(phenotypes[filtered,])\n",
     "nrow(phenotypes[-filtered,])\n",
@@ -78,28 +77,28 @@
    "outputs": [],
    "source": [
     "# Scale all continuous variables to be used to have a mean = 0 and SD = 1 \n",
-    "phenotypes$x_WBC=scale(phenotypes$x_WBC)\n",
-    "phenotypes$x_RBC=scale(phenotypes$x_RBC)\n",
-    "phenotypes$x_lymphocytes=scale(phenotypes$x_lymphocytes)\n",
-    "phenotypes$x_platelet_count=scale(phenotypes$x_platelet_count)\n",
-    "phenotypes$x_neutrophill=scale(phenotypes$x_neutrophill)\n",
-    "phenotypes$x_Microalbumin=scale(phenotypes$x_Microalbumin)\n",
-    "phenotypes$x_Creatinine=scale(phenotypes$x_Creatinine)\n",
-    "phenotypes$x_APOA=scale(phenotypes$x_APOA)\n",
-    "phenotypes$x_APOB=scale(phenotypes$x_APOB)\n",
-    "phenotypes$x_Cholesterol=scale(phenotypes$x_Cholesterol)\n",
-    "phenotypes$x_HDL=scale(phenotypes$x_HDL)\n",
-    "phenotypes$x_LDL=scale(phenotypes$x_LDL)\n",
-    "phenotypes$x_Triglycerides=scale(phenotypes$x_Triglycerides)\n",
-    "phenotypes$x_CRP=scale(phenotypes$x_CRP)\n",
-    "phenotypes$x_Cystatin=scale(phenotypes$x_Cystatin)\n",
-    "phenotypes$x_HbA1c=scale(phenotypes$x_HbA1c)\n",
-    "phenotypes$x_IGF=scale(phenotypes$x_IGF)\n",
-    "phenotypes$x_VITD=scale(phenotypes$x_VITD)\n",
-    "phenotypes$x_GGT=scale(phenotypes$x_GGT)\n",
-    "phenotypes$x_ASP_AT=scale(phenotypes$x_ASP_AT)\n",
-    "phenotypes$x_ALA_AT=scale(phenotypes$x_ALA_AT)\n",
-    "phenotypes$x_AP=scale(phenotypes$x_AP)"
+    "phenotypes\\$x_WBC=scale(phenotypes\\$x_WBC)\n",
+    "phenotypes\\$x_RBC=scale(phenotypes\\$x_RBC)\n",
+    "phenotypes\\$x_lymphocytes=scale(phenotypes\\$x_lymphocytes)\n",
+    "phenotypes\\$x_platelet_count=scale(phenotypes\\$x_platelet_count)\n",
+    "phenotypes\\$x_neutrophill=scale(phenotypes\\$x_neutrophill)\n",
+    "phenotypes\\$x_Microalbumin=scale(phenotypes\\$x_Microalbumin)\n",
+    "phenotypes\\$x_Creatinine=scale(phenotypes\\$x_Creatinine)\n",
+    "phenotypes\\$x_APOA=scale(phenotypes\\$x_APOA)\n",
+    "phenotypes\\$x_APOB=scale(phenotypes\\$x_APOB)\n",
+    "phenotypes\\$x_Cholesterol=scale(phenotypes\\$x_Cholesterol)\n",
+    "phenotypes\\$x_HDL=scale(phenotypes\\$x_HDL)\n",
+    "phenotypes\\$x_LDL=scale(phenotypes\\$x_LDL)\n",
+    "phenotypes\\$x_Triglycerides=scale(phenotypes\\$x_Triglycerides)\n",
+    "phenotypes\\$x_CRP=scale(phenotypes\\$x_CRP)\n",
+    "phenotypes\\$x_Cystatin=scale(phenotypes\\$x_Cystatin)\n",
+    "phenotypes\\$x_HbA1c=scale(phenotypes\\$x_HbA1c)\n",
+    "phenotypes\\$x_IGF=scale(phenotypes\\$x_IGF)\n",
+    "phenotypes\\$x_VITD=scale(phenotypes\\$x_VITD)\n",
+    "phenotypes\\$x_GGT=scale(phenotypes\\$x_GGT)\n",
+    "phenotypes\\$x_ASP_AT=scale(phenotypes\\$x_ASP_AT)\n",
+    "phenotypes\\$x_ALA_AT=scale(phenotypes\\$x_ALA_AT)\n",
+    "phenotypes\\$x_AP=scale(phenotypes\\$x_AP)"
    ]
   },
   {
@@ -125,13 +124,13 @@
     "\n",
     "# Compute PheWAS for non-smoking female participants\n",
     "results= phewas(phenotypes=phewas_phenotypes,\n",
-    "genotypes=phenotypes[phenotypes$smoking_status==0&phenotypes$sex==0,c(\"studiepersonid\", \"maternal_smoking\")],\n",
+    "genotypes=phenotypes[phenotypes\\$smoking_status==0&phenotypes\\$sex==0,c(\"studiepersonid\", \"maternal_smoking\")],\n",
     "covariates=phenotypes[,c(\"studiepersonid\", \"x_agebase\", \"alcohol\", \"x_BMI\", \"genoPC1\", \n",
     "                \"genoPC2\",\"genoPC3\", \"lack_of_PA\", \"x_RBC\", \"x_lymphocytes\", \"x_APOB\", \"x_Cystatin\", \"x_HbA1c\", \"x_IGF\", \"x_VITD\")],\n",
     "                 cores=4, additive.genotypes=T,min.records=500)\n",
     "\n",
     "# Compute Z scores\n",
-    "results$Z=as.numeric(results$beta)/as.numeric(results$SE)\n",
+    "results\\$Z=as.numeric(results\\$beta)/as.numeric(results\\$SE)\n",
     "\n",
     "# Write the summary statistics to a file\n",
     "write.table(results, file=\"/Your_directory/PHEWAS_nonsmokers_female.txt\", \n",
@@ -139,13 +138,13 @@
     "\n",
     "# Compute PheWAS for non-smoking female participants\n",
     "results= phewas(phenotypes=phewas_phenotypes,\n",
-    "genotypes=phenotypes[phenotypes$smoking_status==0&phenotypes$sex==1,c(\"studiepersonid\", \"maternal_smoking\")],\n",
+    "genotypes=phenotypes[phenotypes\\$smoking_status==0&phenotypes\\$sex==1,c(\"studiepersonid\", \"maternal_smoking\")],\n",
     "covariates=phenotypes[,c(\"studiepersonid\", \"x_agebase\", \"alcohol\", \"x_BMI\", \"genoPC1\", \n",
     "                \"genoPC2\",\"genoPC3\", \"lack_of_PA\", \"x_RBC\", \"x_lymphocytes\", \"x_APOB\", \"x_Cystatin\", \"x_HbA1c\", \"x_IGF\", \"x_VITD\")],\n",
     "                 cores=4, additive.genotypes=T,min.records=500)\n",
     "\n",
     "# Compute Z scores\n",
-    "results$Z=as.numeric(results$beta)/as.numeric(results$SE)\n",
+    "results\\$Z=as.numeric(results\\$beta)/as.numeric(results\\$SE)\n",
     "\n",
     "# Write the summary statistics to a file\n",
     "write.table(results, file=\"/Your_directory/PHEWAS_nonsmokers_male.txt\", \n",
