--- a/TWAS.ipynb
+++ b/TWAS.ipynb
@@ -98,26 +98,26 @@
    "outputs": [],
    "source": [
     "#Add FDR column to be used for extra quality control\n",
-    "results_data$FDR=p.adjust(results_data$TWAS.P, method=\"fdr\")\n",
+    "results_data\\$FDR=p.adjust(results_data\\$TWAS.P, method=\"fdr\")\n",
     "\n",
     "#restrict the results to only coding genes to be ploted\n",
-    "results_data$ENSG=gsub(\"\\\\..*\", \"\", gsub(\".*\\\\.ENSG\",\"ENSG\", results_data$FILE))\n",
+    "results_data\\$ENSG=gsub(\"\\\\..*\", \"\", gsub(\".*\\\\.ENSG\",\"ENSG\", results_data\\$FILE))\n",
     "\n",
     "genes=fread(\"~Your_dir/coding_genes.tsv\", data.table=F)\n",
     "colnames(genes)[1]=\"ID\"\n",
-    "genes$ID=gsub(\"\\\\..*\", \"\", genes$ID)\n",
-    "genes=genes$ID\n",
+    "genes\\$ID=gsub(\"\\\\..*\", \"\", genes\\$ID)\n",
+    "genes=genes\\$ID\n",
     "head(genes,1)\n",
     "\n",
-    "plot=results_data[which(results_data$ENSG %in% genes),c(\"ID\",\"TWAS.Z\",\"FDR\",\"ENSG\")]\n",
+    "plot=results_data[which(results_data\\$ENSG %in% genes),c(\"ID\",\"TWAS.Z\",\"FDR\",\"ENSG\")]\n",
     "\n",
     "#Restrict significant results to instances where FDR <= 0.01 and absolute Z-score > 5.5 (i.e. P-val < 10^(-8))\n",
-    "plot=plot[which(complete.cases(plot$FDR)),]\n",
-    "plot=plot[which(plot$FDR<=0.01),]\n",
-    "plot$absZ=abs(plot$TWAS.Z)\n",
-    "plot=plot[order(plot$absZ, decreasing=T),]\n",
-    "plot=plot[!duplicated(plot$ID),]\n",
-    "plot=plot[plot$absZ>5.5,]\n",
+    "plot=plot[which(complete.cases(plot\\$FDR)),]\n",
+    "plot=plot[which(plot\\$FDR<=0.01),]\n",
+    "plot\\$absZ=abs(plot\\$TWAS.Z)\n",
+    "plot=plot[order(plot\\$absZ, decreasing=T),]\n",
+    "plot=plot[!duplicated(plot\\$ID),]\n",
+    "plot=plot[plot\\$absZ>5.5,]\n",
     "colnames(plot)[1]=\"PLOT\"\n",
     "\n",
     "#Plot the results using 'ggplot2'\n",
@@ -126,20 +126,20 @@
     "head(results_data)\n",
     "\n",
     "\n",
-    "plot_results=results_data[order(results_data$CHR,results_data$P0 ), c(\"ID\",\"CHR\",\"P0\",\"TWAS.Z\",\"PLOT\")]\n",
-    "plot_results=plot_results[!is.na(plot_results$TWAS.Z ),]\n",
-    "plot_results$seq=1:nrow(plot_results)\n",
-    "plot_results$basecolour=\"grey\"\n",
-    "plot_results[(plot_results$CHR%%2 )==1,\"basecolour\"]=\"black\"\n",
-    "plot_results$symbol=\"1\"\n",
-    "plot_results[(plot_results$ TWAS.Z)>5.5,\"symbol\"]=\"25\"\n",
-    "plot_results[(plot_results$ TWAS.Z)< -5.5,\"symbol\"]=\"26\"\n",
-    "plot_results$symbol=factor(plot_results$symbol)\n",
-    "plot_results$ID=as.character(plot_results$ID)\n",
+    "plot_results=results_data[order(results_data\\$CHR,results_data\\$P0 ), c(\"ID\",\"CHR\",\"P0\",\"TWAS.Z\",\"PLOT\")]\n",
+    "plot_results=plot_results[!is.na(plot_results\\$TWAS.Z ),]\n",
+    "plot_results\\$seq=1:nrow(plot_results)\n",
+    "plot_results\\$basecolour=\"grey\"\n",
+    "plot_results[(plot_results\\$CHR%%2 )==1,\"basecolour\"]=\"black\"\n",
+    "plot_results\\$symbol=\"1\"\n",
+    "plot_results[(plot_results\\$ TWAS.Z)>5.5,\"symbol\"]=\"25\"\n",
+    "plot_results[(plot_results\\$ TWAS.Z)< -5.5,\"symbol\"]=\"26\"\n",
+    "plot_results\\$symbol=factor(plot_results\\$symbol)\n",
+    "plot_results\\$ID=as.character(plot_results\\$ID)\n",
     "\n",
-    "labels = aggregate(plot_results$seq, by = list(plot_results$CHR),mean)\n",
-    "labels$tick=labels$x\n",
-    "labels$labels=unique(plot_results$CHR)\n",
+    "labels = aggregate(plot_results\\$seq, by = list(plot_results\\$CHR),mean)\n",
+    "labels\\$tick=labels\\$x\n",
+    "labels\\$labels=unique(plot_results\\$CHR)\n",
     "\n",
     "options(repr.plot.width=8, repr.plot.height=4, repr.plot.res=240)\n",
     "\n",
@@ -155,7 +155,7 @@
     "theme(legend.position = \"none\", axis.text.x=element_text(angle=45,hjust=1))+\n",
     "geom_hline(yintercept = 0, col=\"black\")+\n",
     "xlab(\"Chromosomes\") +ylab(\"Z-Score\")+\n",
-    "scale_x_continuous(breaks = labels$tick, labels = labels$label, expand = c(0.01, 0))+\n",
+    "scale_x_continuous(breaks = labels\\$tick, labels = labels\\$label, expand = c(0.01, 0))+\n",
     "ggrepel::geom_text_repel(aes(label=ifelse(abs(TWAS.Z)>5.5,as.character(PLOT),'')), size=3,angle=0,max.overlaps=40,nudge_x=1000,force=5)"
    ]
   }
